[project]
name = "pdm-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christopher", email = "chrism@alleninstitute.org"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
